Add poc and leads pages

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,6 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@fortawesome/fontawesome-free/css/all.css";
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
+@import 'ag-grid-community/styles/ag-grid.css';
+@import 'ag-grid-community/styles/ag-theme-alpine.css';
+@import "~@fortawesome/fontawesome-free/css/all.css";
+@import 'handsontable/dist/handsontable.full.min.css';
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
