--- a/client/src/app/components/dialog/add-lead/add-lead-dialog.component.html
+++ b/client/src/app/components/dialog/add-lead/add-lead-dialog.component.html
@@ -1,45 +1,43 @@
 <div class="dialog-size-alignment-styling" mat-dialog-content [formGroup]="form">
-    <p>Add new lead details:</p>
+    <h2>Add new lead details</h2>
     <mat-form-field>
       <mat-label>Name</mat-label>
       <input matInput formControlName="name" placeholder="Name">
-  </mat-form-field>
-  <mat-form-field>
-      <mat-label>Status</mat-label>
-      <input matInput formControlName="status" placeholder="Status">
-  </mat-form-field>
-  <mat-form-field>
-      <mat-label>Address</mat-label>
-      <input matInput formControlName="address" >
-  </mat-form-field>
-  <mat-form-field>
-    <mat-label>City</mat-label>
-    <input matInput formControlName="city" >
-</mat-form-field>
-<mat-form-field>
-    <mat-label>State</mat-label>
-    <input matInput formControlName="state" >
-</mat-form-field>
-<mat-form-field>
-    <mat-label>Pincode</mat-label>
-    <input matInput formControlName="pincode" >
-</mat-form-field>
-<mat-form-field>
-    <mat-label>Email</mat-label>
-    <input matInput formControlName="email" >
-</mat-form-field>
-<mat-form-field>
-    <mat-label>Website</mat-label>
-    <input matInput formControlName="website" >
-</mat-form-field>
-<mat-form-field>
-    <mat-label>Domain</mat-label>
-    <input matInput formControlName="doamin" >
-</mat-form-field>
-<mat-form-field>
-    <mat-label>Call Frequency</mat-label>
-    <input matInput formControlName="call_frequency" >
-</mat-form-field>
+    </mat-form-field>
+    <mat-form-field>
+        <mat-label>Address</mat-label>
+        <input matInput formControlName="address" >
+    </mat-form-field>
+    <mat-form-field>
+        <mat-label>City</mat-label>
+        <input matInput formControlName="city" >
+    </mat-form-field>
+    <mat-form-field>
+        <mat-label>State</mat-label>
+        <input matInput formControlName="state" >
+    </mat-form-field>
+    <mat-form-field>
+        <mat-label>Pincode</mat-label>
+        <input matInput formControlName="pincode" >
+    </mat-form-field>
+    <mat-form-field>
+        <mat-label>Email</mat-label>
+        <input matInput formControlName="email" >
+    </mat-form-field>
+    <mat-form-field>
+        <mat-label>Website</mat-label>
+        <input matInput formControlName="website" >
+    </mat-form-field>
+    <mat-form-field>
+        <mat-label>Domain</mat-label>
+        <input matInput formControlName="domain" >
+    </mat-form-field>
+    <mat-form-field>
+            <mat-label>Call Frequency</mat-label>
+            <mat-select formControlName="call_frequency">
+              <mat-option *ngFor="let frequency of callFrequencies">{{frequency}}</mat-option>
+            </mat-select>
+    </mat-form-field>
 </div>
 <div mat-dialog-actions>
     <button mat-button (click)="onNoClick()">Cancel</button>
