UI changes functionality

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="universal-header">
-    <div>KAM</div>
+    <div style="display: flex; justify-content: center; height: 50px; align-items: center;">KAM</div>
     <app-dashboard></app-dashboard>
 </div>
 <router-outlet></router-outlet>
