--- a/client/src/app/components/lead-management/lead-summary/lead-summary.component.html
+++ b/client/src/app/components/lead-management/lead-summary/lead-summary.component.html
@@ -1,3 +1,4 @@
-<p>Hello Summary</p>
-<h1>Point of Contacts</h1>
-<app-lead-poc></app-lead-poc>
+<div style="margin: 20px;">
+    <h1>Point of Contacts(POCs)</h1>
+    <app-lead-poc></app-lead-poc>
+</div>
