--- a/client/src/app/components/call-planner/call-planner.component.html
+++ b/client/src/app/components/call-planner/call-planner.component.html
@@ -1,3 +1,4 @@
 <div>
-    <app-table  style="height: 90vh;" [rowData]="rowData" [columnDefs]="columnDefs"></app-table>
+    <h2 style="display: flex; justify-content: center; margin-bottom: 0">Leads requiring calls today</h2>
+    <app-table  style="height: 80vh;" [rowData]="rowData" [columnDefs]="columnDefs"></app-table>
 </div>
