--- a/client/src/app/components/interactions/interactions.component.html
+++ b/client/src/app/components/interactions/interactions.component.html
@@ -1,4 +1,4 @@
 <div>
-    <button mat-raised-button (click)="onAddInteraction()">Add Interaction</button>
-    <app-table  style="height: 90vh;" [rowData]="rowData" [columnDefs]="columnDefs"></app-table>
+    <button mat-raised-button (click)="onAddInteraction()" color="primary" style="width: 100%;">Add Interaction</button>
+    <app-table  style="height: 80vh;" [rowData]="rowData" [columnDefs]="columnDefs"></app-table>
 </div>
