add cron job and update queries

--- a/client/src/app/components/dialog/add-interaction/add-interaction-dialog.component.html
+++ b/client/src/app/components/dialog/add-interaction/add-interaction-dialog.component.html
@@ -32,7 +32,7 @@
             </mat-form-field>
             <mat-form-field>
                 <mat-label>Order Value</mat-label>
-                <input matInput formControlName="order_value" >
+                <input matInput formControlName="order_value" type="number">
             </mat-form-field>
             <button mat-raised-button (click)="removeOrder(i)">Remove Order</button>
         </div>
