--- a/client/src/app/components/call-planner/call-planner.component.html
+++ b/client/src/app/components/call-planner/call-planner.component.html
@@ -1,3 +1,6 @@
+<div class="page-overlay-wrapper" *ngIf="isLoading">
+    <mat-spinner class="spinner"></mat-spinner>
+</div>
 <div>
     <h2 style="display: flex; justify-content: center; margin-bottom: 0">Leads requiring calls today</h2>
     <app-table  style="height: 80vh;" [rowData]="rowData" [columnDefs]="columnDefs"></app-table>
