--- a/client/src/app/components/dashboard/dashboard.component.html
+++ b/client/src/app/components/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar>
+<mat-toolbar style="justify-content: space-between;" *ngIf="userLogin">
     <span class="spacer-style"></span>
   
     <nav mat-tab-nav-bar [tabPanel]="tabPanel">
@@ -11,6 +11,8 @@
       >
     </nav>
 
-  </mat-toolbar>
-  
-  <mat-tab-nav-panel #tabPanel></mat-tab-nav-panel>
+    <button mat-raised-button style="float:right" color="primary" (click)="onLogoutUser()">Logout</button>
+</mat-toolbar>
+
+
+<mat-tab-nav-panel #tabPanel></mat-tab-nav-panel>
