--- a/client/src/app/components/interactions/interactions.component.html
+++ b/client/src/app/components/interactions/interactions.component.html
@@ -1,3 +1,7 @@
+<div class="page-overlay-wrapper" *ngIf="isLoading">
+    <mat-spinner class="spinner"></mat-spinner>
+</div>
+
 <div>
     <button mat-raised-button (click)="onAddInteraction()" color="primary" style="width: 100%;">Add Interaction</button>
     <app-table  style="height: 80vh;" [rowData]="rowData" [columnDefs]="columnDefs"></app-table>
