--- a/client/src/app/components/lead-management/lead-management.component.html
+++ b/client/src/app/components/lead-management/lead-management.component.html
@@ -1,3 +1,6 @@
+<div class="page-overlay-wrapper" *ngIf="isLoading">
+    <mat-spinner class="spinner"></mat-spinner>
+</div>
 <div>
     <button mat-raised-button style="width: 100%;" (click)="OnAddNewLead()" color="primary">Add Lead</button>
     <app-table  style="height: 80vh;" [rowData]="rowData" [columnDefs]="columnDefs" (cellClickedEvent)="onNodeClicked($event)"></app-table>
