--- a/client/src/app/components/sign-up/sign-up.component.html
+++ b/client/src/app/components/sign-up/sign-up.component.html
@@ -1,3 +1,6 @@
+<div class="page-overlay-wrapper" *ngIf="isLoading">
+  <mat-spinner class="spinner"></mat-spinner>
+</div>
 <div style="margin: 20px">
   <div style="display: flex; flex-direction: column;" [formGroup]="form">
       <mat-form-field>
