--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -14,3 +14,20 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     --button-pink-color: #8a33fd;
     --side-bar-color: #e0e0dc;
 }
+
+.page-overlay-wrapper {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    z-index: 1009;
+    background: rgba(154, 159, 152, 0.5);
+  }
+  
+  .spinner {
+    position: fixed;
+    top: 45%;
+    left: 45%;
+    z-index: 100;
+  }
+  
